hphp/test/zend/good/ext/simplexml/tests/SimpleXMLElement_addAttribute_required_attribute_name.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("simplexml")) { echo "skip extension not available"; }
}
